fixed word wrap issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -42,6 +42,7 @@
   top: 68px;
   padding-left: 24px;
   color: white;
+  width: 768px;
 
   p {
     font-size: 46pt;
